--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASEURL = https://goparkapi.azurewebsites.net/api
+# VITE_API_BASEURL = https://goparkapi.azurewebsites.net/api
+VITE_API_BASEURL = https://localhost:7077/api
