--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_BASEURL = https://goparkapi.azurewebsites.net/api
+# VITE_GOOGLE_CLIENT_ID = 1082013721099-pvgt90o9snnqur6kir30q4ccjqr1889e.apps.googleusercontent.com
