--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_BASEURL = https://goparkapi.azurewebsites.net/api
 #VITE_API_BASEURL = https://localhost:7077/api
 VITE_MY_WEB_URL = https://www.mygoparking.com
+VITE_GOOGLE_MAP_API_KEY = AIzaSyALBHIW2HQWkmhCK-VXqGIoTVttRvMTtXo
